Fix title overlap

--- a/src/scss/_book.scss
+++ b/src/scss/_book.scss
@@ -16,11 +16,11 @@
 .Book-Container {
   display: flex;
   width: 100%;
-  // justify-content: space-between;
+  justify-content: space-between;
   align-self: center;
   align-content: center;
   margin: 1.5rem 6.25rem 0;
-  padding: 0 9.188rem 0 1.688rem;
+  padding: 0 1.688rem 0 1.688rem;
   border-radius: 4px;
   border: solid 1px #e8e8e8;
   background-color: #fff;
@@ -31,7 +31,7 @@
 }
 
 .Genre {
-  margin: 1.3rem 0.938rem 0.125rem 0;
+  margin: 1.3rem 0 0.125rem 0;
   width: 3.063rem;
   height: 1.125rem;
   opacity: 0.5;
@@ -46,7 +46,8 @@
 }
 
 .Title {
-  width: 12.313rem;
+  // width: 12.313rem;
+  background: #0290ff;
   height: 1.813rem;
   margin: 0.188rem 0 0 0;
   font-family: RobotoSlab, serif;
@@ -75,7 +76,6 @@
 
 .Book-Edits {
   display: flex;
-  justify-content: center;
   align-items: center;
   margin-bottom: 15px;
   height: 40px;
@@ -83,7 +83,6 @@
 }
 
 .Edit-Item {
-  // width: 4.563rem;
   height: 1.188rem;
   margin: 0.188rem 0.938rem 0.125rem 0;
   font-family: RobotoSlab, serif;
